--- a/journeymap/config/5.1/journeymap.core.config
+++ b/journeymap/config/5.1/journeymap.core.config
@@ -74,11 +74,5 @@
   "renderOverlayPreEvent": true,
   "optionsManagerViewed": "",
   "splashViewed": "",
-  "disabled": false,
-  "configVersion": {
-    "major": 5,
-    "minor": 1,
-    "micro": 4,
-    "patch": "p2"
-  }
+  "disabled": false
 }
