--- a/config/AWWayofTime.cfg
+++ b/config/AWWayofTime.cfg
@@ -443,6 +443,7 @@ wellofsufferingblacklist {
     B:FairyFactions.Fairy=false
     B:Ghast=false
     B:Giant=false
+    B:Guardian=false
     B:LavaSlime=false
     B:MCA.EntityGrimReaper=false
     B:MCA.EntityHuman=false
@@ -623,8 +624,10 @@ wellofsufferingblacklist {
     B:customnpcs.npcvillager=false
     B:customnpcs.npczombiefemale=false
     B:customnpcs.npczombiemale=false
+    B:doggystyle.Dog=false
     B:doggytalents.dog=false
     B:"doggytalents.doggytalents:dog"=false
+    B:lmmx.LittleMaidX=false
     B:minero=false
     B:mushgloom=false
     B:npcEnderman=false
