--- a/config/Botania.cfg
+++ b/config/Botania.cfg
@@ -458,6 +458,12 @@ shedding {
     I:Giant.metadata=0
     I:Giant.rate=-1
 
+    # Configuration of Shedding for Guardian
+    S:Guardian.item=
+    I:Guardian.lexiconDisplaySize=40
+    I:Guardian.metadata=0
+    I:Guardian.rate=-1
+
     # Configuration of Shedding for LavaSlime
     S:LavaSlime.item=
     I:LavaSlime.lexiconDisplaySize=40
@@ -1381,20 +1387,14 @@ shedding {
     I:arsmagica2.Whirlwind.lexiconDisplaySize=40
     I:arsmagica2.Whirlwind.metadata=0
     I:arsmagica2.Whirlwind.rate=-1
-
-    # Configuration of Shedding for camping.bearGrizzly
     S:camping.bearGrizzly.item=
     I:camping.bearGrizzly.lexiconDisplaySize=40
     I:camping.bearGrizzly.metadata=0
     I:camping.bearGrizzly.rate=-1
-
-    # Configuration of Shedding for camping.camper
     S:camping.camper.item=
     I:camping.camper.lexiconDisplaySize=40
     I:camping.camper.metadata=0
     I:camping.camper.rate=-1
-
-    # Configuration of Shedding for camping.foxArctic
     S:camping.foxArctic.item=
     I:camping.foxArctic.lexiconDisplaySize=40
     I:camping.foxArctic.metadata=0
@@ -1550,6 +1550,12 @@ shedding {
     I:customnpcs.npczombiemale.metadata=0
     I:customnpcs.npczombiemale.rate=-1
 
+    # Configuration of Shedding for doggystyle.Dog
+    S:doggystyle.Dog.item=
+    I:doggystyle.Dog.lexiconDisplaySize=40
+    I:doggystyle.Dog.metadata=0
+    I:doggystyle.Dog.rate=-1
+
     # Configuration of Shedding for doggytalents.dog
     S:doggytalents.dog.item=
     I:doggytalents.dog.lexiconDisplaySize=40
@@ -1561,6 +1567,12 @@ shedding {
     I:"doggytalents.doggytalents:dog.lexiconDisplaySize"=40
     I:"doggytalents.doggytalents:dog.metadata"=0
     I:"doggytalents.doggytalents:dog.rate"=-1
+
+    # Configuration of Shedding for lmmx.LittleMaidX
+    S:lmmx.LittleMaidX.item=
+    I:lmmx.LittleMaidX.lexiconDisplaySize=40
+    I:lmmx.LittleMaidX.metadata=0
+    I:lmmx.LittleMaidX.rate=-1
 
     # Configuration of Shedding for minero
     S:minero.item=
